# mkdocs-treeblocks

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  pytest.txt
docs/: development.md  syntax.md
src/mkdocs_treeblocks/: __init__.py  parser.py  plugin.py  renderer.py  transform.py
tests/: test_mkdocs_plugin.py  test_parser.py  test_renderer.py  test_transform.py
tests/fixtures/mkdocs_basic/: mkdocs.yml
tests/fixtures/mkdocs_basic/docs/: index.md
tests/fixtures/mkdocs_material/: mkdocs.yml
