[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocs-treeblocks"
version = "0.1.0"
description = "A MkDocs extension for rendering tree-style code blocks and directory structures."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [
  { name = "Joshua Mullenberg" }
]
keywords = ["mkdocs", "markdown", "documentation", "tree", "directory-structure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: MkDocs",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "mkdocs>=1.6",
  "markdown>=3.6",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "twine>=5.0",
  "mkdocs-material>=9.5",
  "pytest>=8.0",
]

[project.entry-points."mkdocs.plugins"]
treeblocks = "mkdocs_treeblocks.plugin:TreeblocksPlugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/mkdocs_treeblocks"]
